unpackaged/main/default/objects/litify_pm__Matter_Stage__c/litify_pm__Matter_Stage__c.object-meta.xml
<CustomObject>
    <description>This is a Stage from a Matter Plan. It&#39;s a template which will be used by Matter_Stage_Activity (Stage)</description>
    <label>Matter Stage</label>
    <nameField>
        <label>Matter Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Matter Stages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>