unpackaged/main/default/objects/litify_pm__Matter_Stage__c/fields/litify_pm__Estimated_Billable_Time_Worked__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Estimated_Billable_Time_Worked__c</fullName>
    <label>Estimated Billable Time Worked</label>
    <summarizedField>litify_pm__Default_Matter_Task__c.litify_pm__Estimated_Time_Value__c</summarizedField>
    <summaryForeignKey>litify_pm__Default_Matter_Task__c.litify_pm__Matter_Stage__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>