unpackaged/main/default/objects/litify_pm__Matter_Stage__c/fields/litify_pm__Estimated_Expenses__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Estimated_Expenses__c</fullName>
    <label>Estimated Expenses</label>
    <summarizedField>litify_pm__Default_Matter_Task__c.litify_pm__Estimated_Expense_Cost__c</summarizedField>
    <summaryForeignKey>litify_pm__Default_Matter_Task__c.litify_pm__Matter_Stage__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>