unpackaged/main/default/objects/litify_pm__Matter_Stage__c/fields/litify_pm__Last_Matter_Task__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Last_Matter_Task__c</fullName>
    <label>Last Matter Task</label>
    <summarizedField>litify_pm__Default_Matter_Task__c.litify_pm__days_until_due_after_open_date__c</summarizedField>
    <summaryForeignKey>litify_pm__Default_Matter_Task__c.litify_pm__Matter_Stage__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>