unpackaged/main/default/objects/litify_pm__Matter_Stage__c/fields/litify_pm__Matter_Plan__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Matter_Plan__c</fullName>
    <label>Matter Plan</label>
    <referenceTo>litify_pm__Matter_Plan__c</referenceTo>
    <relationshipLabel>Matter Milestones</relationshipLabel>
    <relationshipName>Matter_Milestones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>