unpackaged/main/default/objects/litify_pm__Matter_Stage__c/fields/litify_pm__Stage_Order__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Stage_Order__c</fullName>
    <label>Stage Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>