unpackaged/main/default/objects/litify_pm__Matter_Stage__c/fields/litify_pm__Task_Set__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Task_Set__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if this stage can be used as a Task Set on a Matter.</description>
    <label>Task Set</label>
    <type>Checkbox</type>
</CustomField>