unpackaged/main/default/objects/litify_pm__Matter_Stage__c/fields/litify_pm__Tasks__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Tasks__c</fullName>
    <label>Tasks</label>
    <summaryForeignKey>litify_pm__Default_Matter_Task__c.litify_pm__Matter_Stage__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>