unpackaged/main/default/objects/litify_pm__Matter_Stage__c/fields/OldSFID__c.field-meta.xml
<CustomField>
    <fullName>OldSFID__c</fullName>
    <label>OldSFID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>